# IDHAN

./: .clang-format  .clang-format-ignore  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  ConnectionManager_8hpp_source.html  ConnectionPool_8hpp_source.html  Database_8hpp_source.html  Dockerfile  Doxyfile  FGLSpec.md  FileDataContainer_8hpp_source.html  FileDataPool_8hpp_source.html  FileData_8hpp_source.html  IDHANAbstractDatabase_8hpp_source.html  IDHANDatabaseTemplate_8hpp_source.html  IDHANDatabase_8hpp_source.html  IDHANExceptions_8hpp_source.html  IDHANPostgresql_8hpp_source.html  IDHANSqlite_8hpp_source.html  IDHAN_8hpp_source.html  README.md  RecursiveConnection_8hpp_source.html  Tag_8hpp_source.html  UniqueConnection_8hpp_source.html  annotated.html  annotated_dup.js  classConnectionManager-members.html  classConnectionManager.html  classDatabase-members.html  classDatabase.html  classFileData-members.html  classFileData.html  classFileDataContainer-members.html  classFileDataContainer.html  classFileDataContainer.js  classFileDataEmpty.html  classFileDataEmpty__inherit__graph.map  classFileDataEmpty__inherit__graph.md5  (+372 more)
HydrusImporter/: CMakeLists.txt
HydrusImporter/src/: HydrusImporter.cpp  HydrusImporter.hpp  copyFileStorage.cpp  copyHashes.cpp  copySiblings.cpp  copyTagDomains.cpp  copyTags.cpp  main.cpp
HydrusImporter/src/sqlitehelper/: Binder.cpp  Binder.hpp  Query.cpp  Query.hpp  Transaction.hpp  TransactionBaseCoro.hpp  binders.hpp  concepts.hpp  extractors.hpp
HydrusImporter/src/tags/: copyMappings.cpp  copyParents.cpp  copySiblings.cpp
IDHAN/: CMakeLists.txt
IDHAN/cmake_modules/: GenerateHydrusConstants.cmake
IDHAN/include/: IDHANTypes.hpp  KeyPermissions.hpp  NET_CONSTANTS.hpp  decodeHex.hpp  hydrus_constants.hpp  hydrus_serialisable_constants_gen.hpp  mime_type_map.hpp  splitTag.hpp
IDHAN/include/codes/: ImportCodes.hpp
IDHAN/include/idhan/: versions.hpp
IDHAN/include/logging/: format_ns.hpp
IDHAN/modules/: GenerateHydrusConstants.cmake
IDHAN/src/: splitTag.cpp  stub.cpp
IDHANClient/: CMakeLists.txt
IDHANClient/include/: IDHAN
IDHANClient/include/idhan/: ClientContext.hpp  IDHANClient.hpp  Network.hpp
IDHANClient/src/: ClientContext.cpp  IDHANClient.cpp  Network.cpp
IDHANClient/src/logging/: logger.cpp
IDHANClient/src/records/: addUrls.cpp  createRecords.cpp
IDHANClient/src/tags/: addTags.cpp  autocompleteTag.cpp  createTag.cpp  createTags.cpp  getRecordTags.cpp  getTagInfo.cpp  getTagRelationships.cpp
IDHANMigration/: CMakeLists.txt
IDHANMigration/include/: management.hpp  migrations.hpp
IDHANMigration/src/: 00-idhan_info.sql  05-records.sql  10-tag_namespaces.sql  100-active_tag_mappings.sql  100-jobs.sql  100-tag_mappings.sql  101-file_info.sql  105-active_tag_parents_triggers.sql  105-tags_combined.sql  110-total_tag_counts.sql  115-tags.sql  120-file_info.sql  130-alternative_files.sql  135-video_metadata.sql  140-image_project_metadata.sql  145-file_info.sql  15-tag_subtags.sql  20-tags.sql  25-view_tag_combined.sql  26-func_tagText.sql  30-file_clusters.sql  35-tag_domains.sql  45-file_info.sql  50-metadata.sql  51-image_metadata.sql  52-archive_metadata.sql  60-url_domains.sql  70-tag_mappings.sql  71-tag_aliases.sql  72-tag_parents.sql  73-func_tagAliasesAfterInsertTrigger.sql  74-func_tagAliasesAfterDeleteTrigger.sql  75-func_tagAliasesAfterUpdateTrigger.sql  76-func_tagMappingsAfterInsert.sql  77-func_repairTagMappingsIdeals.sql  78-func_checkAliasRecursion.sql  80-func_createTagDomainPartitions.sql  85-func_createBatchTags.sql  90-active_tag_mappings_parents.sql  91-func_activeTagParents.sql  (+6 more)
IDHANModules/: CMakeLists.txt
IDHANModules/include/: MetadataModule.hpp  ModuleBase.hpp  ThumbnailerModule.hpp
IDHANModules/premade/: FFMPEGMetadata.cpp  FFMPEGMetadata.hpp  FFMPEGThumbnailer.cpp  FFMPEGThumbnailer.hpp  ImageVipsMetadata.cpp  ImageVipsMetadata.hpp  ImageVipsThumbnailer.cpp  ImageVipsThumbnailer.hpp  JPGMetadata.cpp  JPGMetadata.hpp  PsdMetadata.cpp  PsdMetadata.hpp  VideoMetadata.cpp  VideoMetadata.hpp  entry.cpp  ffmpeg.hpp  vips.hpp
IDHANModules/src/: MetadataModule.cpp  ThumbnailerModule.cpp  dummy.cpp
IDHANServer/: CMakeLists.txt  main.cpp
IDHANServer/include/idhan/: ConnectionArguments.hpp  ServerContext.hpp
IDHANServer/modules/: GenerateMigrations.cmake
IDHANServer/src/: Config.cpp  Config.hpp  ConnectionArguments.hpp  ServerContext.cpp  ServerContext.hpp  example.toml  exceptions.hpp  fixme.hpp  main.cpp  paths.cpp  paths.hpp  versions.hpp
IDHANServer/src/api/: APIAuth.cpp  APIAuth.hpp  APIMaintenance.hpp  ClusterAPI.cpp  ClusterAPI.hpp  FileRelationshipsAPI.hpp  Heartbeat.cpp  Heartbeat.hpp  IDHANApi.hpp  IDHANAuth.cpp  IDHANAuth.hpp  IDHANFileAPI.hpp  IDHANImportAPI.hpp  IDHANMaintenanceAPI.hpp  IDHANMaintnanceAPI.hpp  IDHANRecordAPI.hpp  IDHANSearchAPI.hpp  IDHANStatsWS.cpp  IDHANStatsWS.hpp  IDHANTagAPI.hpp  ImportAPI.hpp  InfoAPI.hpp  JobsAPI.cpp  JobsAPI.hpp  RecordAPI.hpp  SearchAPI.hpp  TagAPI.hpp  Ui.cpp  Ui.hpp  api.hpp  createTag.cpp  docs.cpp  index.cpp  tagSearch.cpp  version.cpp  version.hpp
IDHANServer/src/core/: Database.cpp  Database.hpp  SearchBuilder.cpp  SearchBuilder.hpp  records.cpp  records.hpp  tags.cpp  tags.hpp
IDHANServer/src/crypto/: SHA256.cpp  SHA256.hpp  sha256.cpp  sha256.cppm  sha256.hpp
IDHANServer/src/db/: ManagementConnection.cpp  ManagementConnection.hpp  TagSearch.cpp  TagSearch.hpp  dbTypes.hpp  pgEscape.cpp  (+5 more)
IDHANWebUI/: CMakeLists.txt
IDHANWebUI/src/: WebUI.cpp  WebUI.hpp  WebUI.ui  main.cpp
docs/: CMakeLists.txt  api.yaml  build.md  config.md  docker.md  idea.md  jobs.md  setup.md
docs/api/: 1.0.0.yaml  index.yaml  ipc.md  webapi.md
docs/libfgl_custom/: header_template.html  layout_template.xml
docs/server/: main.tex
src/IDHAN/: CMakeLists.txt
src/IDHANClient/: CMakeLists.txt
src/IDHANServer/: CMakeLists.txt
tests/: CMakeLists.txt
tests/database/: CMakeLists.txt  UnitTest.cpp
tests/src/: client.cpp  dummy.cpp  server.cpp  serverStartHelper.cpp  serverStarterHelper.hpp
tools/TagEditor/: CMakeLists.txt
(+2519 files in other folders)
